<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IMusic</string>
    <string name="action_settings">..</string>
	<string name="action_search">搜索音乐</string>
	<string name="action_search_all_hint">全局搜索..</string>
	<string name="action_search_part_hint">当前列表搜索..</string>
	<string name="action_equalizer">均衡器</string>
	<string name="action_delete_music_for_playlist">从播放队列中删除</string>
	<string name="action_add_playlist_to_songlist">保存播放队列到歌单</string>
	<string name="action_clean_playlist">清除播放队列</string>
	<string name="action_playing_for_timing">定时停止播放</string>
	<string name="bestlike_music">最喜欢的歌曲</string>
	<string name="bestlike_music_default_name">还没有喜欢的歌曲</string>
	<string name="bestlike_about_singer">相关歌手的专辑</string>
	<string name="clean_search_key">清除搜索记录</string>
	<string name="title_song">歌曲</string>
	<string name="title_artist">歌手</string>
	<string name="title_album">专辑</string>
	<string name="show_all_song">显示全部歌曲</string>
	<string name="show_all_artist">显示全部歌手</string>
	<string name="show_all_album">显示全部专辑</string>
	<string name="not_search_result">没有搜索结果</string>
	<string name="not_search_result_desc">请检查您的拼写是否正确，或尝试另一个关键字</string>
	<string name="all_songs">全部歌曲</string>
	<string name="more_menu_play">播放</string>
	<string name="more_menu_play_next">下一首播放</string>
	<string name="more_menu_add_list">添加到播放队列</string>
	<string name="more_menu_random_all">随机全部</string>
	<string name="more_menu_add_songlist">添加到歌单</string>
	<string name="more_menu_about_artist">来自此艺术家的更多作品</string>
	<string name="more_menu_set_ringo">设为铃声</string>
	<string name="more_menu_delete">删除</string>
	<string name="more_menu_edit">编辑</string>
	<string name="songlist_add_name">歌单名称</string>
	<string name="choose_songlist">选择歌单</string>
	<string name="choose_timing">选择时间</string>
	<string name="slide_open">打开</string>
	<string name="slide_close">关闭</string>
	<string name="play_method">播放方式</string>
	<string name="play_method_order">顺序播放</string>
	<string name="play_method_loop">列表循环</string>
	<string name="play_method_single_loop">单曲循环</string>
	<string name="play_method_random">随机播放</string>
	<string name="dont_have_songlist">还没有播放队列哟</string>
	<string name="dont_have_playing_song">暂无播放的歌曲~</string>
	<string name="not_song_info">暂无歌曲信息</string>
</resources>
