<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.lbrong.lmusicplayer.SongListHomeActivity" >

    <item
        android:id="@+id/action_play"
        android:title="@string/more_menu_play"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_random_all"
        android:title="@string/more_menu_random_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_list"
        android:title="@string/more_menu_add_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>

</menu>